Chapter2/1.9/manifests/log-output-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
spec:
  selector:
    app: log-output
  ports:
    - protocol: TCP
      port: 2010
      targetPort: 3000
