Chapter2/1.9/manifests/pingpong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  selector:
    app: pingpong
  ports:
    - protocol: TCP
      port: 2010
      targetPort: 3000
